--- a/_data/menus.yml
+++ b/_data/menus.yml
@@ -1,21 +1,21 @@
 main:
-  - name: "Services"
-    url: "/services/"
+  - name: "Download"
+    url: "/download/"
     weight: 2
-  - name: "Team"
-    url: "/team/"
-    weight: 3
-  - name: "About"
-    url: "/about/"
-    weight: 4
-  - name: "Contact"
-    url: "/contact/"
-    weight: 5
+  # - name: "Team"
+  #   url: "/team/"
+  #   weight: 3
+  # - name: "About"
+  #   url: "/about/"
+  #   weight: 4
+  # - name: "Contact"
+  #   url: "/contact/"
+  #   weight: 5
 
 footer:
   - name: "Home"
     url: "/"
     weight: 1
-  - name: "Contact"
-    url: "/contact/"
-    weight: 2
+  # - name: "Contact"
+  #   url: "/contact/"
+  #   weight: 2
