--- a/_data/seo.yml
+++ b/_data/seo.yml
@@ -1,4 +1,5 @@
 google_analytics_id: ""  
-meta_twitter_site: "@zerostaticio"
-meta_twitter_creator: "@zerostaticio"
-copyright_text: 'Free Jekyll theme by <a class="zerostatic" href="https://www.zerostatic.io">www.zerostatic.io</a>'
+meta_twitter_site: "@jamespan"
+meta_twitter_creator: "@jamespan"
+copyright_text: >
+  <small>Copyrights &copy; {{site.time | date: '%Y'}} {{site.title}}</small><small>&nbsp;&#124;&nbsp;Built with <span>❤</span> by jamespan</small>
